Correct Header spacing in Desktop mode

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@ header {
 header h1 {
 	margin: 0;
 	padding: 38px 0;
-	border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
@@ -195,17 +194,14 @@ footer span {
 @media all and (min-width: 1200px) {
 	header {
 		border-bottom: 3px solid #77a466;
+		justify-content: space-between;
 		flex-direction: row;
-		align-items: none;
 		margin: 0 auto;
 	}
-	header h1 {
-		align-items: flex-start;
-	}
+
 	header nav ul li {
 		list-style-type: none;
 		display: inline;
-		align-items: flex-end;
 	}
 	.bottom-section{
 		border-bottom: 1px solid #eee;
